--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
   <body class="bg-brand-background">
     <div id="root"></div>
-    <!-- Update script type to text/babel and use a relative path for the src -->
+    <!-- This script tag correctly transpiles and runs the React application as a module -->
     <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
